--- a/monitor_avva_pod.yml
+++ b/monitor_avva_pod.yml
@@ -13,8 +13,9 @@
     failure_regex: "(?i)(error|failed|exception|panic|traceback)"  # case-insensitive
     ticket_on_failure: true
     ticket_api_url: "https://ascendiondigitalsolutionsdemo1.service-now.com/api/now/table/incident"  # replace
-    ticket_auth_user: "Thejas"          # replace
-    ticket_auth_pass: "User@2003"       # use AWX credential instead of storing here
+    ticket_auth_user: "{{ sn_user }}"
+    ticket_auth_pass: "{{ sn_pass }}"
+       # use AWX credential instead of storing here
     ticket_payload:
       short_description: "AVVA pod failed after restarts"
       description: |
