--- a/monitor_avva_pod.yml
+++ b/monitor_avva_pod.yml
@@ -6,16 +6,19 @@
 
   vars:
     namespace: default
-    pod_label: "app=avva-app"            # label selector to find pod(s)
-    max_restarts: 3                      # restart attempts
-    wait_ready_timeout: 120              # seconds to wait for pod ready after restart
-    log_tail_lines: 200                  # how many lines to check from logs
-    failure_regex: "(?i)(error|failed|exception|panic|traceback)"  # case-insensitive
+    pod_label: "app=avva-app"
+    max_restarts: 3
+    wait_ready_timeout: 120
+    log_tail_lines: 200
+    failure_regex: "(?i)(error|failed|exception|panic|traceback)"
+
     ticket_on_failure: true
-    ticket_api_url: "https://ascendiondigitalsolutionsdemo1.service-now.com/api/now/table/incident"  # replace
+    ticket_api_url: "https://ascendiondigitalsolutionsdemo1.service-now.com/api/now/table/incident"
+
+    # These come from AWX credential mapping
     ticket_auth_user: "{{ sn_user }}"
     ticket_auth_pass: "{{ sn_pass }}"
-       # use AWX credential instead of storing here
+
     ticket_payload:
       short_description: "AVVA pod failed after restarts"
       description: |
@@ -24,129 +27,96 @@
         Attempts: {{ max_restarts }}
         Observed logs: "{{ last_failure_excerpt | default('n/a') }}"
 
-  vars_prompt: []   # no prompts
-
   tasks:
 
-    - name: Find pod name(s) matching label
-      command: >-
-        kubectl get pods -n {{ namespace }} -l "{{ pod_label }}" -o jsonpath='{.items[0].metadata.name}'
+    - name: Find pod name matching label
+      command: >
+        kubectl get pods -n {{ namespace }} -l "{{ pod_label }}"
+        -o jsonpath='{.items[0].metadata.name}'
       register: pod_get
-      failed_when: pod_get.rc != 0 and pod_get.stdout == ""
-      changed_when: false
+      failed_when: pod_get.stdout == ""
 
-    - name: set pod_name fact
-      set_fact:
+    - set_fact:
         pod_name: "{{ pod_get.stdout | trim }}"
-      when: pod_get.stdout != ""
-
-    - name: Fail if no pod found
-      fail:
-        msg: "No pod found matching label {{ pod_label }} in namespace {{ namespace }}"
-      when: pod_name is not defined or pod_name == ""
 
     - name: Fetch latest logs
-      command: >-
-        kubectl logs {{ pod_name }} -n {{ namespace }} --tail={{ log_tail_lines }}
+      command: kubectl logs {{ pod_name }} -n {{ namespace }} --tail={{ log_tail_lines }}
       register: pod_logs
       failed_when: false
-      changed_when: false
 
-    - name: Search logs for failure pattern
-      set_fact:
+    - set_fact:
         failed_match: "{{ (pod_logs.stdout is search(failure_regex)) | bool }}"
-        last_failure_excerpt: "{{ pod_logs.stdout | regex_search(failure_regex + '.*', multiline=True) | default(pod_logs.stdout[:400]) }}"
-      # no failure condition here; we only mark
+        last_failure_excerpt: "{{ pod_logs.stdout[:400] }}"
 
-    - name: "Debug: pod logs indicate failure?"
-      debug:
-        msg: "failed_match={{ failed_match }}"
-
-    - name: If no failure found — exit clean
+    - name: Exit play if pod is healthy
       meta: end_play
       when: failed_match == false
 
-    # If failure found, attempt restarts up to max_restarts
-    - name: Try restart cycle (loop)
+    ###############################################################
+    # Restart loop — FIXED for AWX using with_sequence
+    ###############################################################
+    - name: Restart pod attempts
       block:
-        - name: Attempt restart {{ item }} — trigger a pod restart
-          vars:
-            attempt_idx: "{{ item }}"
-          block:
-            - name: Restart by deleting pod (deployment will recreate)
-              command: kubectl delete pod {{ pod_name }} -n {{ namespace }} --wait=false
-              register: del_res
-              failed_when: false
 
-            - name: Wait for new pod to appear and become ready (by label)
-              command: >
-                bash -lc "kubectl wait --for=condition=ready pod -l '{{ pod_label }}' -n {{ namespace }} --timeout={{ wait_ready_timeout }}s"
-              register: wait_res
-              failed_when: wait_res.rc != 0
+        - name: Delete pod to restart it
+          command: kubectl delete pod {{ pod_name }} -n {{ namespace }} --wait=false
+          failed_when: false
 
-            - name: Refresh pod name after restart
-              command: >-
-                kubectl get pods -n {{ namespace }} -l "{{ pod_label }}" -o jsonpath='{.items[0].metadata.name}'
-              register: pod_get_after
-              failed_when: pod_get_after.rc != 0
-              changed_when: false
+        - name: Wait for new pod to be ready
+          command: >
+            kubectl wait --for=condition=ready pod -l "{{ pod_label }}"
+            -n {{ namespace }} --timeout={{ wait_ready_timeout }}s
+          register: wait_res
+          failed_when: wait_res.rc != 0
 
-            - name: set new pod_name fact
-              set_fact:
-                pod_name: "{{ pod_get_after.stdout | trim }}"
+        - name: Get new pod name
+          command: >
+            kubectl get pods -n {{ namespace }} -l "{{ pod_label }}"
+            -o jsonpath='{.items[0].metadata.name}'
+          register: newpod
 
-            - name: Sleep 5s to let logs stabilize
-              pause:
-                seconds: 5
+        - set_fact:
+            pod_name: "{{ newpod.stdout | trim }}"
 
-            - name: Get logs after restart
-              command: kubectl logs {{ pod_name }} -n {{ namespace }} --tail={{ log_tail_lines }}
-              register: pod_logs_after
-              failed_when: false
+        - pause:
+            seconds: 5
 
-            - name: Check if failure still present after restart
-              set_fact:
-                failed_match_after: "{{ (pod_logs_after.stdout is search(failure_regex)) | bool }}"
-                last_failure_excerpt: "{{ pod_logs_after.stdout | regex_search(failure_regex + '.*', multiline=True) | default(pod_logs_after.stdout[:400]) }}"
+        - name: Check logs after restart
+          command: kubectl logs {{ pod_name }} -n {{ namespace }} --tail={{ log_tail_lines }}
+          register: log_after
 
-            - name: Stop loop early if pod is healthy
-              meta: end_loop
-          rescue:
-            - name: Record that this restart attempt failed (couldn't bring pod ready)
-              set_fact:
-                failed_match_after: true
-              # continue to next attempt
-      loop: "{{ range(1, (max_restarts | int) + 1) | list }}"
-      when: failed_match
-      register: restart_loop_result
+        - set_fact:
+            failed_match_after: "{{ (log_after.stdout is search(failure_regex)) | bool }}"
+            last_failure_excerpt: "{{ log_after.stdout[:400] }}"
 
-    - name: After restart attempts — determine final state
-      set_fact:
-        final_failed: "{{ (restart_loop_result is defined and (restart_loop_result.results | selectattr('ansible_facts.failed_match_after','defined') | list | last).ansible_facts.failed_match_after) | default(true) }}"
+        - meta: end_loop
+          when: failed_match_after == false
 
-    - name: If still failing and ticket_on_failure -> create a ticket
+      with_sequence: start=1 end="{{ max_restarts }}"
+
+    ###############################################################
+    # Final result and ticket creation
+    ###############################################################
+    - set_fact:
+        final_failed: "{{ failed_match_after | default(true) }}"
+
+    - name: Create ServiceNow ticket if failure continues
       when: final_failed and ticket_on_failure
-      block:
-        - name: Create ticket in ServiceNow (example)
-          uri:
-            url: "{{ ticket_api_url }}"
-            method: POST
-            user: "{{ ticket_auth_user }}"
-            password: "{{ ticket_auth_pass }}"
-            force_basic_auth: yes
-            status_code: 201,200
-            headers:
-              Content-Type: "application/json"
-            body: "{{ ticket_payload | to_json }}"
-          register: ticket_res
-          failed_when: ticket_res.status not in [200,201]
-        - name: debug ticket response
-          debug:
-            var: ticket_res.json
-      # if you use Jira, replace with jira module or uri to Jira API
+      uri:
+        url: "{{ ticket_api_url }}"
+        method: POST
+        user: "{{ ticket_auth_user }}"
+        password: "{{ ticket_auth_pass }}"
+        force_basic_auth: yes
+        status_code: 200,201
+        headers:
+          Content-Type: "application/json"
+        body: "{{ ticket_payload | to_json }}"
+      register: ticket_result
 
-    - name: Final status message
-      debug:
-        msg: >-
-          Play complete. Pod label "{{ pod_label }}" final_failed={{ final_failed }}.
-          Last failure excerpt: {{ last_failure_excerpt | default('n/a') }}
+    - debug:
+        var: ticket_result.json
+      when: final_failed and ticket_on_failure
+
+    - debug:
+        msg: "Monitoring finished. Final failure = {{ final_failed }} | pod = {{ pod_name }}"
