--- a/monitor_avva_pod.yml
+++ b/monitor_avva_pod.yml
@@ -1,6 +1,6 @@
 ---
 - name: Monitor AVVA pod logs & restart if required
-  hosts: 10.112.0.11
+  hosts: aipo-dev-03
   connection: local
   gather_facts: no
 
